--- a/assets/scss/_client-pages.scss
+++ b/assets/scss/_client-pages.scss
@@ -1,55 +1,55 @@
 .project {
-	background: linear-gradient(to bottom,rgb(210, 184, 158) 0%, #F9F2DF 10%);
-  // background-color: #f9f2df;
-  padding: 15rem 0;
-  &__detail {
-    width: 50%;
-    margin: auto;
-    position: relative;
-    padding-bottom: 15rem;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    &:before {
-      content: "";
-      position: absolute;
-      left: 25%;
-      bottom: 0;
-      height: .1rem;
-      width: 50%;
-      border-bottom: .2rem solid #000;
+	background: linear-gradient(to bottom, rgb(210, 184, 158) 0%, #f9f2df 10%);
+	// background-color: #f9f2df;
+	padding: 15rem 0;
+	&__detail {
+		width: 50%;
+		margin: auto;
+		position: relative;
+		padding-bottom: 15rem;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		&:before {
+			content: '';
+			position: absolute;
+			left: 25%;
+			bottom: 0;
+			height: 0.1rem;
+			width: 50%;
+			border-bottom: 0.2rem solid #000;
 		}
-    &-title {
-      opacity: 0;
-      font-size: 4rem;
-      text-transform: uppercase;
-      margin-bottom: 4rem;
-      font-family: $primary-font-bold;
-      animation: loadIn 3s 1s forwards;
+		&-title {
+			opacity: 0;
+			font-size: 4rem;
+			text-transform: uppercase;
+			margin-bottom: 4rem;
+			font-family: $primary-font-bold;
+			animation: loadIn 3s 1s forwards;
 		}
-    &-image {
-      width: 35rem;
-      height: auto;
-      margin: 0 auto 8rem;
-      animation: loadIn 3s;
+		&-image {
+			width: 35rem;
+			height: auto;
+			margin: 0 auto 8rem;
+			animation: loadIn 3s;
 		}
-    &-desc {
-      opacity: 0;
-      font-size: 2rem;
-      font-family: $primary-font-semi;
-      animation: loadIn 3s 1s forwards;
-      &:not(:last-child) {
-        margin-bottom: 2rem;
+		&-desc {
+			opacity: 0;
+			font-size: 2rem;
+			font-family: $primary-font-semi;
+			animation: loadIn 3s 1s forwards;
+			&:not(:last-child) {
+				margin-bottom: 2rem;
 			}
 		}
 	}
-	&__concepts, 
+	&__concepts,
 	&__final {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 5rem;
-    justify-content: center;
-    align-items: center;
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 5rem;
+		justify-content: center;
+		align-items: center;
 		&-title {
 			font-family: $primary-font-bold;
 			font-size: 3rem;
@@ -68,12 +68,62 @@
 	}
 }
 @keyframes loadIn {
-  from {
-    transform: translateY(-3rem);
-    opacity: 0;
+	from {
+		transform: translateY(-3rem);
+		opacity: 0;
 	}
-  to {
-    transform: translateY(0);
-    opacity: 1;
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+@media screen and (max-width: 900px) {
+	.project {
+		padding: 5rem 0;
+		&__detail {
+			width: 80%;
+			padding-bottom: 5rem;
+		}
+		&__concepts {
+			&-image {
+				&:nth-child(odd) {
+					margin-right: 5rem;
+				}
+			}
+		}
+	}
+}
+@media screen and (max-width: 500px) {
+	.project {
+		&__detail {
+			&-image {
+				width: 25rem;
+			}
+			&-title {
+				font-size: 2.8rem;
+			}
+			&-desc {
+				font-size: 1.8rem;
+			}
+		}
+		&__concepts {
+			&-title {
+				font-size: 2.8rem;
+			}
+			&-image {
+				width: 25rem;
+				margin: 0 0 2rem !important;
+			}
+		}
+		&__final {
+			&-title {
+				font-size: 2.8rem;
+			}
+			&-image {
+				width: 25rem;
+				margin: 0 0 2rem !important;
+			}
+		}
 	}
 }
