--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -8,14 +8,14 @@
 	justify-content: center;
 	align-items: center;
 	-webkit-transform-style: preserve-3d;
-	-webkit-transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0, 0, 0);
 	-webkit-backface-visibility: hidden;
 	-webkit-animation: contactBgAnimate 15s 2s ease-in-out infinite;
 	animation: contactBgAnimate 15s 2s ease-in-out infinite;
 	&_form {
-		background-color: rgba(255,255,255,0.8);
-		border: .5rem solid $primary-blue;
-		border-radius: .5rem;
+		background-color: rgba(255, 255, 255, 0.8);
+		border: 0.5rem solid $primary-blue;
+		border-radius: 0.5rem;
 		padding: 5rem;
 		width: 40%;
 		&-title {
@@ -27,7 +27,7 @@
 		&-desc {
 			border: none;
 			font-size: 1.4rem;
-			border-radius: .5rem;
+			border-radius: 0.5rem;
 			width: 100%;
 			margin-bottom: 2rem;
 		}
@@ -35,15 +35,15 @@
 			background-color: $primary-orange;
 			font-size: 1.8rem;
 			font-family: $primary-font-reg;
-			border-radius: .5rem;
+			border-radius: 0.5rem;
 			padding: 1rem 2rem;
 			color: #fff;
 			text-transform: uppercase;
 			cursor: pointer;
-			transition: .3s all;
+			transition: 0.3s all;
 			&:hover {
 				transform: translateY(-4px);
-				box-shadow: 0 .5rem .5rem #aaa;
+				box-shadow: 0 0.5rem 0.5rem #aaa;
 			}
 			&:focus {
 				transform: translateY(0);
@@ -77,3 +77,18 @@
 // 		background-image: url('../images/contact-1.jpg');
 // 	}
 // }
+
+@media screen and (max-width: 900px) {
+	.contact {
+		&_form {
+			width: 90%;
+		}
+	}
+}
+@media screen and (max-width: 500px) {
+	.contact {
+		&_form {
+			padding: 5rem 2rem;
+		}
+	}
+}
