--- a/assets/scss/_policies.scss
+++ b/assets/scss/_policies.scss
@@ -1,39 +1,39 @@
 .policies {
-  padding: 15rem 10rem 5rem;
-  background: linear-gradient(to bottom,rgb(210, 184, 158) 0%, #F9F2DF 10%);
-  &-title,
-  &-header {
-    text-transform: uppercase;
-    font-family: $primary-font-bold;
+	padding: 15rem 10rem 5rem;
+	background: linear-gradient(to bottom, rgb(210, 184, 158) 0%, #f9f2df 10%);
+	&-title,
+	&-header {
+		text-transform: uppercase;
+		font-family: $primary-font-bold;
 	}
-  &-title {
-    text-align: center;
-    font-size: 4rem;
-    margin-bottom: 3rem;
+	&-title {
+		text-align: center;
+		font-size: 4rem;
+		margin-bottom: 3rem;
 	}
-  &-header {
-    font-size: 2.4rem;
-    margin-top: 8rem;
-    position: relative;
-    &:before {
-      content: '';
-      position: absolute;
-      top: -4rem;
-      left: 50%;
-      width: 10%;
-      transform: translateX(-50%);
-      height: .1rem;
-      border-bottom: .2rem solid #000;
+	&-header {
+		font-size: 2.4rem;
+		margin-top: 8rem;
+		position: relative;
+		&:before {
+			content: '';
+			position: absolute;
+			top: -4rem;
+			left: 50%;
+			width: 10%;
+			transform: translateX(-50%);
+			height: 0.1rem;
+			border-bottom: 0.2rem solid #000;
 		}
 	}
-  &-info {
-    font-size: 1.6rem;
-    font-family: $primary-font-semi;
-    margin-bottom: 2rem;
+	&-info {
+		font-size: 1.6rem;
+		font-family: $primary-font-semi;
+		margin-bottom: 2rem;
 	}
-  &_payment {
-    margin-bottom: 2rem;
-    list-style: none;
+	&_payment {
+		margin-bottom: 2rem;
+		list-style: none;
 		&-option {
 			font-size: 1.6rem;
 			font-family: $primary-font-semi;
@@ -42,10 +42,10 @@
 }
 
 @media screen and (max-width: 780px) {
-  .policies {
-    text-align: justify;
-    padding: 10rem 3rem 3rem;
-    background: #F9F2DF;
+	.policies {
+		text-align: justify;
+		padding: 3rem;
+		background: #f9f2df;
 		&-title {
 			font-size: 2.4rem;
 		}
